feat: add error due to incorrect input

--- a/src/Button/Button.module.css
+++ b/src/Button/Button.module.css
@@ -6,6 +6,8 @@
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    color: #2b2322;
+    font-weight: bold;
 }
 
 .button:hover {
