--- a/src/Button/Button.module.css
+++ b/src/Button/Button.module.css
@@ -1,24 +1,37 @@
 .button {
     margin: 15px 15px;
     background-color: #ae54d8;
-    width: 130px;
+    min-width: 100px;
+    padding: 10px;
     border-radius: 7px;
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    color: #2b2322;
+    color: white;
     font-weight: bold;
+    opacity: 0.8;
+    border: 3px #7e26a6 outset;
+    font-size: 1em;
+    letter-spacing: 2px;
 }
 
 .button:hover {
     cursor: pointer;
+    opacity: 1;
 }
 
-.buttonDisabled {
+.button:disabled {
     background-color: #7e26a6 !important;
-
+    opacity: 0.8;
 }
 
-.buttonDisabled:hover {
+.button:disabled:hover {
     cursor: not-allowed;
+    opacity: 0.8;
+}
+
+.button:active {
+    border-style: inset;
+}
+
+.button:focus {
+    outline: none;
 }
