--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,27 @@ body {
 }
 
 .App {
-    width: 400px;
     margin: 250px auto;
+    min-width: 600px;
+    max-width: 800px;
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'announce announce'
+                         'counter counter';
+}
+
+.announcement {
+    grid-area: announce;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.counterWrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
+    grid-area: counter;
 }
