--- a/src/CounterSettings/CounterWithSettings.module.css
+++ b/src/CounterSettings/CounterWithSettings.module.css
@@ -1,6 +1,6 @@
 .counter {
     border: 2px solid #7e26a6;
-    width: 300px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
 }
 .buttonWrapper {
     border: 2px solid #7e26a6;
-    width: 90%;
+    min-width: 90%;
     display: flex;
     justify-content: space-evenly;
     border-radius: 7px;
